crates/toml/tests/snapshots/invalid/string/no-open-04.stderr
TOML parse error at line 1, column 6
  |
1 | a = [a']
  |      ^
missing opening quote, expected `'`
